# OVITA

./: .gitignore  .gitmodules  README.md  compare_with_latte.py  drone_trajectory_6.json  environment.yaml  environment_latte.yaml  environment_linux.yaml  extended_4.json  extended_7.json  latte_adapter.py  latte_trajectory_adapter.py  main.py  main_gui_streamlit.py  main_gui_streamlit_final.py  pyproject.toml  readme.txt  requirements.txt  run.sh  run_complete_comparison.sh  run_latte_comparison.sh  simple_latte_adapter.py  user_study_compare_streamlit.py  user_study_streamlit.py  visualize_comparison.py  visualize_dataset.py
comparison_results/: latte_0.json  latte_10.json  latte_adapted_latte_0.json  latte_adapted_latte_10.json  method_comparison.json
dataset/extended_subset/: extended_0.json  extended_1.json  extended_68.json  extended_69.json  extended_70.json  extended_71.json  extended_72.json  extended_73.json  extended_74.json  extended_75.json
dataset/latte_subset/: latte_0.json  latte_1.json  latte_10.json  latte_11.json  latte_12.json  latte_13.json  latte_14.json  latte_15.json  latte_16.json  latte_17.json  latte_18.json  latte_19.json  latte_2.json  latte_20.json  latte_21.json  latte_22.json  (+59 more)
real-world-experiments/: env_descriptor.py  pose_estimation.py  readme.md  readme.txt  seg.py  waypoint_executer.py
scripts/: main.py  main_gui_streamlit.py  run_comparison.py  user_study_compare_streamlit.py  user_study_streamlit.py  visualize_dataset.py
src/: CSM.py  agent.py  config.py  constraints.py  extended_4.json  prompts.py  scp_traj.py  util.py
(+94 files in other folders)
