[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OVITA"
version = "0.1.0"
description = "Codebase for OVITA: Open-Vocabulary Interpretable Trajectory adaptation "
authors = [{ name = "John Doe", email = "JohnDoe@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]